# sxg-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md  input.example.yaml  renovate.json  rustfmt.toml
.github/workflows/: code-style.yml  codeql-analysis.yml  integration-tests.yml  unit-tests.yml
cloudflare_worker/: .gitignore  Cargo.toml  README.md  config.example.yaml  publish.sh  wrangler.example.toml  wrangler.toml.example
cloudflare_worker/certs/: README.md  parse_private_key.go
cloudflare_worker/src/: config.rs  lib.rs  utils.rs
cloudflare_worker/worker/: .eslintignore  .gitignore  build.sh  karma.conf.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  worker.js
cloudflare_worker/worker/spec/support/: jasmine.json
cloudflare_worker/worker/src/: bindings.d.ts  index.ts  signer.ts  storage.ts  streams.test.ts  streams.ts  utils.test.ts  utils.ts  wasmFunctions.ts
config_generator/: Cargo.toml
config_generator/src/: main.rs
credentials/: README.md  parse_private_key.go
distributor/: .gitignore  Cargo.toml  README.md  example.html  instantpage.js.patch
distributor/src/: main.rs  parse_signature.rs  parse_sxg.rs  validate_cert.rs  validate_sxg.rs
fastly_compute/: .gitignore  Cargo.toml  README.md  config.example.yaml  fastly.example.toml
fastly_compute/certs/: .gitignore  README.md
fastly_compute/src/: config.rs  fetcher.rs  main.rs  storage.rs
http_server/: Cargo.toml  README.md  config.example.yaml
http_server/src/: main.rs
playground/: .eslintignore  README.md  build.sh  package-lock.json  package.json  rollup.config.js  tsconfig.json
playground/src/: index.ts  schema.ts
playground/src/client/: emulationOptions.ts  evaluated.ts  index.ts  statistics.ts  templates.ts
playground/src/server/: cache.ts  credentials.ts  fetcher.ts  index.ts  searchResultPage.ts  signer.ts  wasmFunctions.ts
sxg_rs/: Cargo.toml  README.md
sxg_rs/src/: cbor.rs  config.rs  crypto.rs  header_integrity.rs  headers.rs  http.rs  id_headers.rs  lib.rs  link.rs  media_type.rs  mice.rs  process_html.rs  signature.rs  signed_headers.rs  sxg.rs  utils.rs  wasm_worker.rs
sxg_rs/src/acme/: client.rs  directory.rs  eab.rs  jose.rs  jws.rs  mod.rs  polling_timer.rs  state_machine.rs
sxg_rs/src/fetcher/: hyper_fetcher.rs  js_fetcher.rs  mock_fetcher.rs  mod.rs
sxg_rs/src/http_cache/: js_http_cache.rs  mod.rs
sxg_rs/src/http_parser/: accept.rs  base.rs  cache_control.rs  link.rs  media_type.rs  mod.rs  srcset.rs
sxg_rs/src/ocsp/: mod.rs
sxg_rs/src/runtime/: js_runtime.rs  mod.rs
sxg_rs/src/serde_helpers/: base64.rs  mod.rs
sxg_rs/src/signature/: js_signer.rs  mock_signer.rs  mod.rs  rust_signer.rs
sxg_rs/src/static/: entrypoint.html  fallback.html  prefetch.html  success.html  test.html
sxg_rs/src/storage/: js_storage.rs  mod.rs
sxg_rs/src/structured_header/: item.rs  mod.rs  parameterised_list.rs
tools/: Cargo.toml
tools/src/: apply_acme_cert.rs  gen_config.rs  gen_dev_cert.rs  gen_sxg.rs  lib.rs  linux_commands.rs  main.rs  openssl_signer.rs
tools/src/commands/: apply_acme_cert.rs  gen_sxg.rs  mod.rs
tools/src/commands/gen_config/: .gitignore  cloudflare.rs  fastly.rs  http_server.rs  input.example.yaml  mod.rs
tools/src/runtime/: hyper_fetcher.rs  mod.rs  openssl_signer.rs
typescript_utilities/: README.md  build.sh  package-lock.json  package.json
typescript_utilities/src/: processor.ts  signer.ts  streams.ts  wasmFunctions.ts
