[package]
name = "cloudflare_worker"
version = "0.1.0"
authors = ["9083193+antiphoton@users.noreply.github.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"
once_cell = "1.7.2"
pem = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
sxg_rs = {path = "../sxg_rs"}
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

