# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cloudflare_worker"
version = "0.1.0"
authors = ["9083193+antiphoton@users.noreply.github.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"
once_cell = "1.7.2"
pem = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
sxg_rs = { path = "../sxg_rs", features = ["js_fetcher", "js_signer"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

