# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cloudflare_worker"
version = "0.1.0"
authors = ["9083193+antiphoton@users.noreply.github.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
sxg_rs = { path = "../sxg_rs", features = ["wasm"] }
wasm-bindgen = "0.2.83"

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

