# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "distributor"
version = "0.1.0"
authors = ["webpackaging-announce@googlegroups.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
base64 = "0.13.1"
byte-strings = { version = "0.2.2", features = ["const-friendly"] }
ciborium = "0.2.0"
clap = { version = "3.2.23", features = ["derive"] }
form_urlencoded = "1.1.0"
futures = "0.3.25"
http = "0.2.8"
hyper-rustls = "0.23.2"
hyper-trust-dns = { version = "0.5.0", default-features = false, features = ["rustls-webpki", "rustls-http1", "rustls-tls-12"] }
hyper = { version = "0.14.23", features = ["http1", "http2", "server", "stream", "tcp"] }
lazy_static = "1.4.0"
nom = { version = "7.1.1" }
percent-encoding = "2.2.0"
regex = "1.7.0"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
sha2 = "0.10.6"
# TODO: Determine if I can remove strip_id_headers because it's default.
sxg_rs = { path = "../sxg_rs", features = ["strip_id_headers", "rust_signer", "srcset"] }
thiserror = "1.0.37"
tls-listener = { version = "0.5.1", features = ["hyper-h1", "hyper-h2", "rustls"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-rustls = "0.23.4"
url = "2.3.1"
