# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "distributor"
version = "0.1.0"
authors = ["webpackaging-announce@googlegroups.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
base64 = "0.22.0"
byte-strings = { version = "0.3.1", features = ["const-friendly"] }
ciborium = "0.2.2"
clap = { version = "3.2.25", features = ["derive"] }
form_urlencoded = "1.2.1"
futures = "0.3.30"
http = "0.2.12"
hyper-rustls = "0.27.0"
hyper-trust-dns = { version = "0.5.0", default-features = false, features = ["rustls-webpki", "rustls-http1", "rustls-tls-12"] }
hyper = { version = "0.14.28", features = ["http1", "http2", "server", "stream", "tcp"] }
lazy_static = "1.4.0"
nom = { version = "7.1.3" }
percent-encoding = "2.3.1"
regex = "1.10.4"
rustls = "0.23.4"
rustls-pemfile = "1.0.4"
sha2 = "0.10.8"
# TODO: Determine if I can remove strip_id_headers because it's default.
sxg_rs = { path = "../sxg_rs", features = ["strip_id_headers", "rust_signer", "srcset"] }
thiserror = "1.0.58"
tls-listener = { version = "0.5.1", features = ["hyper-h1", "hyper-h2", "rustls"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-rustls = "0.26.0"
url = "2.5.0"
