[package]
name = "fastly_compute"
version = "0.1.0"
authors = ["9083193+antiphoton@users.noreply.github.com"]
edition = "2018"
publish = false

[profile.release]
debug = false

[dependencies]
base64 = "0.13.0"
fastly = "^0.7.3"
futures = { version = "0.3.14", features = ["executor"] }
log = "0.4.14"
log-fastly = "0.2.0"
once_cell = "1.7.2"
pem = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
sxg_rs = { path = "../sxg_rs", features = ["rust_signer"] }
