# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fastly_compute"
version = "0.1.0"
authors = ["9083193+antiphoton@users.noreply.github.com"]
edition = "2018"
publish = false

[profile.release]
debug = false

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
base64 = "0.13.1"
fastly = "^0.8.9"
http = "0.2.8"
log = "0.4.17"
log-fastly = "0.8.9"
pem = "1.1.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_yaml = "0.9.14"
sxg_rs = { path = "../sxg_rs", features = ["rust_signer"] }
tokio = { version = "1.23.0", features = ["rt"] }
url = "2.3.1"

[features]
# Unsupported, but necessary to make `cargo some-cmd --all-features` happy.
wasm = ["sxg_rs/wasm"]
