# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "http_server"
version = "0.1.0"
authors = ["webpackaging-announce@googlegroups.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
clap = { version = "3.2.23", features = ["derive"] }
fs2 = "0.4.3"
futures = "0.3.25"
http = "0.2.8"
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy", rev = "96a398de8522fac07a5e15bd0699f6cd7fa84bce" }
hyper-rustls = "0.23.2"
hyper-tls = "0.5.0"
hyper-trust-dns = { version = "0.5.0", default-features = false, features = ["rustls-webpki", "rustls-http1", "rustls-tls-12"] }
hyper = { version = "0.14.23", features = ["http1", "http2", "server", "stream", "tcp"] }
lazy_static = "1.4.0"
lru = "0.8.1"
rand = "0.8.5"
serde_yaml = "0.9.14"
# TODO: Determine if I can remove strip_id_headers because it's default.
sxg_rs = { path = "../sxg_rs", features = ["strip_id_headers", "rust_signer"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tools = { path = "../tools" }
url = "2.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
