# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sxg_rs"
version = "0.1.0"
authors = ["9083193+antiphoton@users.noreply.github.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["strip_id_headers"]
rust_signer = ["p256"]
srcset = []
strip_id_headers = []
wasm = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
base64 = "0.13.1"
chrono = { version = "0.4.23", features = ["serde"] }
der-parser = { version = "8.1.0", features = ["bigint", "serialize"] }
futures = { version = "0.3.25" }
getrandom = { version = "0.2.8", features = ["js"] }
http = "0.2.8"
js-sys = "0.3.60"
lol_html = "0.3.1"
nom = { version = "7.1.1", features = ["alloc"] }
once_cell = "1.16.0"
pem = "1.1.0"
p256 = { version = "0.11.1", features = ["ecdsa"], optional = true }
serde = { version = "1.0.149", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
sha1 = "0.10.5"
sha2 = "0.10.6"
tokio = { version = "1.23.0", features = ["macros", "parking_lot", "sync", "time"] }
url = "2.3.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["console"] }
x509-parser = "0.14.0"

[dev-dependencies]
tokio-test = "0.4.2"
