# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sxg_rs"
version = "0.1.0"
authors = ["9083193+antiphoton@users.noreply.github.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["strip_id_headers"]
rust_signer = ["p256"]
srcset = []
strip_id_headers = []
wasm = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
der-parser = { version = "8.2.0", features = ["bigint", "serialize"] }
futures = { version = "0.3.30" }
getrandom = { version = "0.2.12", features = ["js"] }
http = "0.2.12"
js-sys = "0.3.69"
lol_html = "0.4.0"
nom = { version = "7.1.3", features = ["alloc"] }
once_cell = "1.19.0"
pem = "1.1.1"
p256 = { version = "0.13.2", features = ["ecdsa"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.115"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1.23.0", features = ["macros", "parking_lot", "sync", "time"] }
url = "2.5.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["console"] }
x509-parser = "0.16.0"

[dev-dependencies]
tokio-test = "0.4.4"
