# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
clap = { version = "3.0.14", features = ["derive"] }
cloudflare = "0.9.0"
console = "0.15.0"
ctrlc = "3.2.1"
der-parser = { version = "6.0.1", features = ["bigint", "serialize"] }
dialoguer = "0.9.0"
futures = { version = "0.3.21", features = ["executor"] }
pem = "1.0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.23"
sxg_rs = { path = "../sxg_rs", features = ["rust_signer"] }
toml = "0.5.8"
url = "2.2.2"
wrangler = "1.19.8"
