# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
base64 = "0.13.1"
clap = { version = "3.2.23", features = ["derive"] }
ctrlc = "3.2.3"
der-parser = { version = "7.0.0", features = ["bigint", "serialize"] }
http = "0.2.8"
hyper = { version = "0.14.23", features = ["client", "http2"]}
hyper-tls = "0.5.0"
pem = "1.1.0"
regex = "1.7.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
sxg_rs = { path = "../sxg_rs", features = ["rust_signer"] }
toml = "0.5.9"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
warp = "0.3.3"
wrangler = "1.19.13"

[features]
# Unsupported, but necessary to make `cargo some-cmd --all-features` happy.
wasm = ["sxg_rs/wasm"]
