# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
base64 = "0.22.0"
clap = { version = "3.2.25", features = ["derive"] }
ctrlc = "3.4.4"
der-parser = { version = "7.0.0", features = ["bigint", "serialize"] }
http = "0.2.12"
hyper = { version = "0.14.28", features = ["client", "http2"]}
hyper-tls = "0.6.0"
pem = "1.1.1"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
sxg_rs = { path = "../sxg_rs", features = ["rust_signer"] }
toml = "0.8.12"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.5.0"
warp = "0.3.6"
wrangler = "1.21.0"

[features]
# Unsupported, but necessary to make `cargo some-cmd --all-features` happy.
wasm = ["sxg_rs/wasm"]
